--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "prettier": "^3.0.1",
-    "prettier-plugin-organize-imports": "^3.2.3"
+    "prettier-plugin-organize-imports": "^3.2.3",
+    "typedoc": "^0.24.8"
   },
   "dependencies": {
     "typescript": "^5.1.6"
