--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -13,9 +13,6 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Ensure `destination_dir` is not empty
-        if: ${{ inputs.destination_dir == '' }}
-        run: exit 1
       - name: Checkout the repository
         uses: actions/checkout@v3
       - name: Use Node.js
@@ -27,9 +24,8 @@ jobs:
         run: yarn --immutable
       - name: Run build script
         run: yarn build:docs
-      - name: Deploy to `${{ inputs.destination_dir }}` directory of `gh-pages` branch
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./typedoc
-          destination_dir: ${{ inputs.destination_dir }}
