--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -2,7 +2,7 @@ name: Publish docs to GitHub Pages
 
 on:
   push:
-    branches: [main]
+    branches: [main, 231125-typedoc-workflow]
   pull_request:
     branches: [main]
 
