--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -13,6 +13,10 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Set Swap Space
+        uses: pierotofy/set-swap-space@master
+        with:
+          swap-size-gb: 36
       - name: Checkout the repository
         uses: actions/checkout@v3
       - name: Use Node.js
