--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "NODE_OPTIONS=--max-old-space-size=8192 tsc --project tsconfig.spec.json && jest",
     "stress": "NODE_OPTIONS=--max-old-space-size=24576 tsc --project tsconfig.stress.json",
     "build": "./build.sh",
-    "build:docs": "NODE_OPTIONS=--max-old-space-size=36864 typedoc --skipErrorChecking",
+    "build:docs": "NODE_OPTIONS=--max-old-space-size=36864 typedoc",
     "precommit": "npm run lint-check && npm run test",
     "prepush": "npm run lint && npm run test && npm run stress",
     "lint-check": "npm run prettier-check && npm run eslint-check",
